--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -18,7 +18,7 @@ template(name='ruser')
                     .ui.large.inline.header.get_user_posts(class=post_header_class)
                         |!{username} 
                         small(title='reputation') {{ commafy karma }}
-                        strong(title="#{site} rank") ##{site_rank} 
+                        // strong(title="#{site} rank") ##{site_rank} 
                         strong(title='global rank') ##{global_rank}
                     with data
                         .ui.list
@@ -98,11 +98,15 @@ template(name='ruser_overview')
                     +ruser_comment
                     .ui.divider
         .eight.wide.column
-            .ui.header upvoted
+            .ui.grey.header 
+                i.thumbs.up.outline.icon
+                |upvoted
             each top_upvoted
                 .ui.header #{title}
         .eight.wide.column
-            .ui.header downvoted
+            .ui.grey.header 
+                i.thumbs.down.outline.icon
+                |downvoted
             each top_downvoted
                 .ui.header #{title}
         .eight.wide.column
@@ -120,23 +124,23 @@ template(name='ruser_top_emotions')
     .ui.basic.label {{ to_percent avg_sent_score}} sentiment
     .ui.green.basic.large.label
         | {{ to_percent avg_joy_score}}% joyful
-        | {{fixed0 rep_joy}} ##{site_joy_rep_rank}/##{global_joy_rep_rank}
+        | {{fixed0 rep_joy}} ##{global_joy_rep_rank}
 
     .ui.blue.basic.large.label
         |{{fixed0 rep_sadness}} sad rep
-        | {{ to_percent avg_sadness_score}}% ##{site_sadness_rep_rank}/##{global_sadness_rep_rank}
+        | {{ to_percent avg_sadness_score}}% ##{global_sadness_rep_rank}
 
     .ui.red.basic.large.label 
         | {{ to_percent avg_anger_score}}% angry
-        | {{fixed0 rep_anger}} rep ##{site_anger_rep_rank}/##{global_anger_rep_rank}
+        | {{fixed0 rep_anger}} rep ##{global_anger_rep_rank}
 
     .ui.orange.basic.large.label
         |{{fixed0 rep_disgust}} disgust rep
-        | {{ to_percent avg_disgust_score}}% ##{site_disgust_rep_rank}/##{global_disgust_rep_rank}
+        | {{ to_percent avg_disgust_score}}% ##{global_disgust_rep_rank}
 
     .ui.grey.basic.large.label
         |{{fixed0 rep_fear}} fear rep
-        | {{ to_percent avg_fear_score}}% ##{site_fear_rep_rank}/##{global_fear_rep_rank}
+        | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
 
                     
                                 
