--- a/client/rusers.jade
+++ b/client/rusers.jade
@@ -4,7 +4,9 @@ template(name='rusers')
             .ui.header 
                 i.reddit.icon
                 |reddit users
-            i.tag.large.icon(title='tags')
+            .ui.header 
+                i.tag.icon
+                |tags
             if selected_tags
                 #clear_tags.ui.grey.icon.compact.circular.button
                     i.remove.icon
@@ -14,6 +16,15 @@ template(name='rusers')
             each all_tags
                 .ui.compact.circular.basic.button.select_tag(class=cloud_tag_class title=count) !{this.name}
                     // small #{this.count}
+            .ui.small.header sort by
+            +ruser_karma_sort_button l='total' i='yin yang' c=''
+            +ruser_karma_sort_button l='link' i='edit' c=''
+            +ruser_karma_sort_button l='comment' i='chat outline' c=''
+            +ruser_karma_sort_button l='joy' i='smile' c='green'
+            +ruser_karma_sort_button l='anger' i='' c='red'
+            +ruser_karma_sort_button l='sadness' i='' c='blue'
+            +ruser_karma_sort_button l='disgust' i='' c='orange'
+            +ruser_karma_sort_button l='fear' i='' c='grey'
             // unless all_tags.count
             //     .ui.basic.center.aligned.segment
             //         .ui.placeholder 
@@ -48,41 +59,74 @@ template(name='rusers')
                                 .line
                                 .line
                 each users
-                    .three.wide.column
-                        a.select_user(href="/user/#{username}")
-                            img.ui.circular.image.zoomer(src=data.snoovatar_img)
-                        .content
-                            a.ui.zoomer.header.select_user(href="/user/#{username}" class=post_header_class)
-                                |!{username}
-                                .ui.basic.circular.label(title='total karma')
-                                    i.grey.yin.yang.icon
-                                    |{{ commafy data.total_karma }}
-                                .ui.basic.circular.label(title='post karma')
-                                    i.grey.edit.icon
-                                    |{{ commafy data.post_karma }}
-                                .ui.basic.circular.label(title='comment karma')
-                                    i.grey.chat.outline.icon
-                                    |{{ commafy data.comment_karma }}
-                                // .ui.basic.label(class=sentiment_class) {{to_percent sentiment_avg}}% #{doc_sentiment_label}
-                            .description
-                                if global_rank
-                                    strong(title='global rank') ##{global_rank}
-                                span(title='accessed')
-                                    i.grey.clock.icon
-                                    | {{ufrom last_access_date}}
-                                .ui.label(title='accept rate') #{accept_rate}%
-                                .ui.circular.compact.basic.button.set_location
-                                    i.grey.marker.icon
-                                    |!{location}
-                                each five_tags
-                                    .ui.small.tertiary.disabled.button #{this}
-                                if user_top_emotion
-                                    .ui.inline.header #{user_top_emotion}
-                                +suser_top_emotions
-                                // if user_top_emotions
-                                // each user_top_emotions
-                                //     .ui.basic.label #{title}
-                                //         small #{count}
-                            
-                                
-                                
+                    +ruser_small
+                    
+template(name='ruser_small')
+    .four.wide.column
+        a.select_user(href="/user/#{username}")
+            img.ui.circular.image.zoomer(src=data.snoovatar_img)
+        .content
+            a.ui.zoomer.header.select_user(href="/user/#{username}" class=post_header_class)
+                |!{username}
+                .ui.basic.circular.label(title='total karma')
+                    i.grey.yin.yang.icon
+                    |{{ commafy data.total_karma }}
+                .ui.basic.circular.label(title='post karma')
+                    i.grey.edit.icon
+                    |{{ commafy data.link_karma }}
+                .ui.basic.circular.label(title='comment karma')
+                    i.grey.chat.outline.icon
+                    |{{ commafy data.comment_karma }}
+                // .ui.basic.label(class=sentiment_class) {{to_percent sentiment_avg}}% #{doc_sentiment_label}
+            .description
+                if global_rank
+                    strong(title='global rank') ##{global_rank}
+                span(title='created')
+                    i.grey.clock.icon
+                    | {{ufrom data.created}}
+                .ui.label(title='accept rate') #{accept_rate}%
+                // .ui.circular.compact.basic.button.set_location
+                //     i.grey.marker.icon
+                //     |!{location}
+                each five_tags
+                    .ui.small.tertiary.disabled.button #{this}
+                if user_top_emotion
+                    .ui.inline.header #{user_top_emotion}
+                +ruser_top_emotion_small
+            
+                // if user_top_emotions
+                // each user_top_emotions
+                //     .ui.basic.label #{title}
+                //         small #{count}
+                // if is_dev 
+                +print_this
+     
+template(name='ruser_karma_sort_button')     
+    .ui.compact.button.sort(class="#{c} #{button_class}")
+        if i 
+            i.icon(class=i)
+        |#{l} karma
+            
+            
+template(name='ruser_top_emotion_small')
+    .ui.basic.label {{ to_percent avg_sent_score}} sentiment
+    .ui.green.small.label
+        | {{ to_percent avg_joy_score}}% joy
+        | {{fixed0 rep_joy}} ##{global_joy_rep_rank}
+
+    .ui.blue.small.label
+        |{{fixed0 rep_sadness}} sad
+        | {{ to_percent avg_sadness_score}}% ##{global_sadness_rep_rank}
+
+    .ui.red.small.label 
+        | {{ to_percent avg_anger_score}}% anger
+        | {{fixed0 rep_anger}} rep ##{global_anger_rep_rank}
+
+    .ui.orange.small.label
+        |{{fixed0 rep_disgust}} disgust
+        | {{ to_percent avg_disgust_score}}% ##{global_disgust_rep_rank}
+
+    .ui.grey.small.label
+        |{{fixed0 rep_fear}} fear
+        | {{ to_percent avg_fear_score}}% ##{global_fear_rep_rank}
+                
