second round of merging frbo and dao, add cloudinary, working post edit

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -59,6 +59,14 @@
 // template(name='print_this')
 //     i.link.code.inline.icon.print_this(title='print to console')
 
+template(name='comments_view_small')            
+    if doc_comments.count
+        .meta
+            each doc_comments 
+                i.grey.chat.outline.icon
+                img.ui.avatar.image(src="{{c.url _author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=user_class)
+                |#{body}
+                div
 
 // template(name='viewing')
 //     if currentUser
