--- a/client/home.jade
+++ b/client/home.jade
@@ -1,3 +1,52 @@
+template(name='home')
+    .ui.stackable.grid
+        .row
+            .sixteen.wide.center.aligned.column
+                .ui.header home
+                .ui.cards 
+                    .ui.card 
+                        .content
+                            a.ui.header(href="/reddit")
+                                i.reddit.icon
+                                |reddit
+                    .ui.card 
+                        .content
+                            a.ui.header(href="/stack")
+                                i.stack.exchange.icon
+                                |stack overflow
+                    .ui.card 
+                        .content
+                            a.ui.header(href="/stack")
+                                i.stack.exchange.icon
+                                |stack overflow
+                    .ui.card 
+                        .content
+                            a.ui.header(href="/rusers")
+                                i.users.icon
+                                |reddit users
+                    .ui.card 
+                        .content
+                            .ui.header
+                                i.university.icon
+                                |university
+                    .ui.card 
+                        .content
+                            .ui.header
+                                i.shop.icon
+                                |shop
+                    .ui.card 
+                        .content
+                            .ui.header
+                                i.clock.icon
+                                |rentals
+                    .ui.card 
+                        .content
+                            .ui.header
+                                i.clock.icon
+                                |rentals
+
+
+
 template(name='dao')
     .ui.stackable.grid
         .row
