--- a/client/nav.jade
+++ b/client/nav.jade
@@ -35,7 +35,7 @@ template(name='nav')
             i.yin.yang.loading.big.icon
             +status    
         .right.menu
-            a.icon.item.add(title='add listing') 
+            a.icon.item.add(title='add post') 
                 i.plus.large.icon
             if unread_count
                 a.item.alerts.select_term(href="#" class=alert_toggle_class)
